--- a/src/app/business/org/org-duty/org-duty.component.html
+++ b/src/app/business/org/org-duty/org-duty.component.html
@@ -9,6 +9,7 @@
   <div class="btn-manner">
     <button class="btn btn-primary" (click)="addDialog = true">增加</button>
     <button class="btn btn-danger" type="button" (click)="deleteFirm()">删除</button>
+    <button class="btn btn-success" type="button" (click)="modifyBtn()">修改</button>
   </div>
   <!--数据-->
   <p-table [columns]="cols" [value]="duties" selectionMode="multiple" [(selection)]="selectedDuties" (onRowSelect)="onRowSelect($event)">
@@ -108,6 +109,91 @@
       <div class="ui-dialog-buttonpane ui-helper-clearfix">
         <button class="btn btn-success" type="button" (click)="addsSave()">保存</button>
         <button class="btn btn-warning" type="button" (click)="addDialog=false">取消</button>
+      </div>
+    </p-footer>
+  </p-dialog>
+
+  <!--增加弹框-->
+  <p-dialog header="修改信息" [(visible)]="modifyDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="800">
+    <div class="ui-g ui-fluid">
+      <!--所属公司-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="addCompany1">所属公司：</label>
+        </div>
+        <div class="ui-g-8">
+          <p-dropdown id="addCompany1" [options]="addCompanySelect" (onChange)="companyChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择所属公司..."></p-dropdown>
+        </div>
+      </div>
+      <!--所属部门-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="addDep1">所属部门：</label>
+        </div>
+        <div class="ui-g-8">
+          <p-dropdown id="addDep1" [options]="addDepSelect" (onChange)="orgsChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择所属部门..."></p-dropdown>
+        </div>
+      </div>
+      <!--上级职务-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="addpid1">上级职务：</label>
+        </div>
+        <div class="ui-g-8">
+          <p-dropdown id="addpid1" [options]="addDepTopDutySelect" (onChange)="topDutyChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择所属部门..."></p-dropdown>
+        </div>
+      </div>
+      <!--职务名称-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="adddutyName1">职务名称：</label>
+        </div>
+        <div class="ui-g-8">
+          <input pInputText id="adddutyName1" [(ngModel)]="modifyDuty.dutyName" ([value])="this.modifyDuty.dutyName"/>
+        </div>
+      </div>
+      <!--职位顺序-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="addpos1">职位顺序：</label>
+        </div>
+        <div class="ui-g-8">
+          <input pInputText id="addpos1" type="number" [(ngModel)]="modifyDuty.pos" ([value])="this.modifyDuty.pos" />
+        </div>
+      </div>
+      <!--数量-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="addquantity1">数量：</label>
+        </div>
+        <div class="ui-g-8">
+          <input pInputText id="addquantity1" type="number" [(ngModel)]="modifyDuty.quantity" ([value])="this.modifyDuty.quantity"/>
+        </div>
+      </div>
+      <!--是否是一把手-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label>是否是一把手：</label>
+        </div>
+        <div class="ui-g-8">
+          <p-radioButton name="group1" value="1" label="是" [(ngModel)]="modifyDuty.boss" inputId="opt2"></p-radioButton>
+          <p-radioButton name="group1" value="0" label="不是" [(ngModel)]="modifyDuty.boss" inputId="opt1"></p-radioButton>
+        </div>
+      </div>
+      <!--职位描述-->
+      <div class="ui-g-12">
+        <div class="ui-g-2">
+          <label for="adddescription1">职位描述：</label>
+        </div>
+        <div class="ui-g-10">
+          <textarea id="adddescription1" rows="5" cols="70" pInputTextarea [(ngModel)]="modifyDuty.description">{{this.modifyDuty.description}}</textarea>
+        </div>
+      </div>
+    </div>
+    <p-footer>
+      <div class="ui-dialog-buttonpane ui-helper-clearfix">
+        <button class="btn btn-success" type="button" (click)="modifySure()">确认</button>
+        <button class="btn btn-warning" type="button" (click)="modifyDialog=false">取消</button>
       </div>
     </p-footer>
   </p-dialog>
